# flowforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_AI.md  LICENSE  README.md  ROADMAP.md  STATUS.md  pyproject.toml  workflow.ff.yaml
.github/workflows/: python-tests.yml
agent_profiles/: claude.yaml  codex.yaml  cursor-free.yaml  cursor-pro.yaml  gemini.yaml  qwen.yaml
architecture/: ADR-003-state-machine-engine.md  ADR-004-event-driven-architecture.md  architecture-diagram.md
brd/: BRD.md
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css  lucide.d.ts
docs/: README.md  architecture.md  cli.md  concepts.md  core_completion_roadmap.md  engineering-workflow.md  ff_025_mission_planning.md  onboarding.md  provider_runtime_validation.md  release-checklist.md  release-strategy.md  workspace.md
docs/adr/: ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md  ADR-011.md  ADR-012.md  ADR-013.md  ADR-014.md  ADR-015.md  ADR-016.md  ADR-017.md
docs/release-notes/: v1.0.0-beta.md
docs/rfcs/: RFC-006.md  RFC-007.md  RFC-008.md  RFC-009.md  RFC-010.md  RFC-011.md  RFC-012.md  RFC-013.md  RFC-014.md  RFC-015.md  RFC-016.md  RFC-017.md  rfc_001_workflow_language.md  rfc_002_execution_provider.md  rfc_003_capability_policy.md  rfc_004_prompt_pipeline.md  rfc_005_memory_engine.md
prd/: PRD.md
src/flowforge/: __init__.py
src/flowforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agent_profile.py  test_api.py  test_artifact_identity_service.py  test_bootstrap.py  test_bootstrap_dx.py  test_cli_hardening.py  test_cli_mission_start_regression.py  test_cli_version.py  test_compiler.py  test_compiler_enrichment.py  test_connectors.py  test_engine.py  test_engineering_session.py  test_engineering_state.py  test_ff_024_hotfix.py  test_git_service.py  test_lifecycle_enforcement.py  test_mission.py  test_mission_cli.py  test_mission_creation_service.py  test_mission_planning_engine.py  test_mission_review_service.py  test_planning_context_builder.py  test_plugin_sdk.py  test_provider_registry.py  test_provider_runtime.py  test_repository.py  test_runtime_integration.py  test_v1_1_refactor.py  test_version.py  test_worker_runtime.py  test_workspace.py
(+106 files in other folders)
