[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowforge"
version = "1.0.0-beta"
description = "A framework for orchestrating human, AI, and system workers using event-driven state machines."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "FlowForge Team", email = "hello@flowforge.dev" }
]
keywords = ["ai", "agent", "workflow", "engineering", "orchestration"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.18.0",
    "pydantic>=2.0.0",
    "websockets>=11.0.0",
    "pyyaml>=6.0.0",
    "google-genai>=0.1.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/adityabriananto/flowforge"
Repository = "https://github.com/adityabriananto/flowforge.git"
"Bug Tracker" = "https://github.com/adityabriananto/flowforge/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.scripts]
flowforge = "flowforge.entrypoints.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flowforge*"]
